--- a/css/contacto.css
+++ b/css/contacto.css
@@ -2,10 +2,9 @@
   padding: 10px;
   padding-top: 0;
   margin-bottom: 10px;
-  border-bottom: 1px solid red;
 }
 
-.contact-information .column_title {
+.contact-information .column__title {
   font-family: "Pacifico", cursive;
   font-weight: 100;
 }
@@ -16,37 +15,25 @@
   top: 5px;
 }
 
-.contact-information .social-icon {
-  justify-content: flex-start;
-  margin-bottom: 10px;
-}
-
-.contact-information .social-icon [class*="fa-"] {
-  background: #de423a;
-  color: white;
-  margin-left: 0;
-  margin-right: 15px;
-}
-
 .formulario {
   padding: 10px;
   padding-top: 0;
 }
 
-.formulario_label,
-.input_txt,
-.input_textarea {
+.formulario__label,
+.input__txt,
+.input__textarea {
   display: block;
   width: 100%;
   outline: none;
 }
 
-.input_txt {
+.input__txt {
   padding: 10px;
   margin-bottom: 10px;
 }
 
-.input_textarea {
+.input__textarea {
   min-height: 100px;
   max-height: 200px;
   min-width: 100%;
@@ -56,7 +43,7 @@
 .btn-formulario {
   border: none;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 /* Estilos responsive */
@@ -68,13 +55,12 @@
     font-size: 0.75em;
   }
   .contact-information {
-    /* border-right: 1px solid #de423a; */
     border-bottom: none;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .contact-information .column_title {
+  .contact-information .column__title {
     font-size: 1.5em;
   }
   .contact-information p {
