--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,7 +38,7 @@ h4 {
 }
 
 /* Header */
-.main-header {
+.header {
   width: 100%;
 }
 
@@ -50,26 +50,26 @@ h4 {
   font-weight: 100;
 }
 
-.info_phone {
+.info__phone {
   color: #de423a;
   margin: 0 auto;
   padding: 10px;
 }
 
-.info_address {
+.info__address {
   color: #de423a;
   margin: 0;
   padding: 10px;
 }
 
-.main-header [class*="fa-"]:before {
+.header [class*="fa-"]:before {
   position: relative;
   top: 2px;
   right: 5px;
 }
 
 /* Estilos Menu */
-.main-nav {
+.nav {
   width: 100%;
   position: relative;
   padding: 10px;
@@ -107,7 +107,7 @@ h4 {
   border-radius: 50%;
 }
 
-.social-icon_link {
+.social-icon__link {
   text-decoration: none;
 }
 
@@ -127,18 +127,19 @@ h4 {
   transition: height 0.3s linear;
 }
 
-.menu_link {
+.menu__link {
   display: block;
   padding: 15px;
   color: white;
   text-decoration: none;
 }
 
-.menu_link:hover {
-  background: #de423a;
-}
+/* .menu__link:hover {
+  color: #de423a;
+  background: white;
+} */
 
-.menu_link_select {
+.menu__link__select {
   background: #de432a;
 }
 
@@ -163,13 +164,13 @@ h4 {
   top: 0;
 }
 
-.banner_img {
+.banner__img {
   width: 100%;
   height: 500px;
   object-fit: cover;
 }
 
-.banner_content {
+.banner__content {
   width: 90%;
   color: white;
   text-align: center;
@@ -191,7 +192,7 @@ h4 {
   padding: 10px;
   text-align: center;
 }
-.welcome_title {
+.welcome__title {
   margin: 15px 0;
   font-size: 1.8em;
   font-family: "Pacifico", cursive;
@@ -205,7 +206,7 @@ h4 {
   margin-bottom: 50px;
 }
 
-.main-dish .column_title {
+.main-dish .column__title {
   font-size: 1.3em;
   text-align: center;
 }
@@ -219,7 +220,7 @@ h4 {
   display: block;
   text-align: center;
   text-decoration: none;
-  width: 120px;
+  width: 150px;
   background: #de423a;
   color: white;
   padding: 10px;
@@ -228,12 +229,13 @@ h4 {
 
 .btn-contact {
   position: absolute;
+  font-size: 1.2em;
   left: 50%;
   transform: translateX(-50%);
 }
 
 /* Dishes */
-.group_title {
+.group__title {
   font-family: "Pacifico", cursive;
   text-align: center;
   font-weight: 100;
@@ -241,23 +243,23 @@ h4 {
   margin: 30px;
 }
 
-.today-dish .column {
+.dish .column {
   margin-bottom: 30px;
   text-align: center;
 }
 
-.today-dish_img {
+.dish__img {
   margin: auto;
   max-width: 350px;
 }
 
-.today-dish_title {
+.dish__title {
   font-size: 1.3em;
   padding-top: 10px;
   padding-bottom: 20px;
 }
 
-.today-dish_price {
+.dish__price {
   font-size: 1.5em;
   color: #de423a;
   font-weight: bold;
@@ -265,11 +267,11 @@ h4 {
 
 /* Footer */
 
-.main-footer .container {
+.footer .container {
   align-items: flex-start;
 }
 
-.main-footer {
+.footer {
   background-color: #de423a;
   color: white;
   padding: 10px;
@@ -277,15 +279,15 @@ h4 {
   font-size: 0.8em;
 }
 
-.main-footer .column {
+.footer .column {
   margin-bottom: 20px;
 }
 
-.main-footer .column_title {
+.footer .column__title {
   margin-bottom: 20px;
 }
 
-.main-footer [class*="fa-"] {
+.footer [class*="fa-"] {
   color: white;
   text-decoration: none;
 }
@@ -293,7 +295,7 @@ h4 {
 .social-icon {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  width: 60%;
   /* margin: auto; */
 }
 
@@ -311,7 +313,7 @@ h4 {
   transition: all 0.5s;
 }
 
-.social-icon_link {
+.social-icon__link {
   text-decoration: none;
 }
 
@@ -370,18 +372,18 @@ h4 {
   .logo {
     color: white;
   }
-  .main-header .info {
+  .header .info {
     text-align: right;
   }
 
-  .main-header .info_phone {
+  .header .info__phone {
     color: white;
   }
-  .main-header .info_address {
+  .header .info__address {
     color: white;
   }
 
-  .main-nav {
+  .nav {
     background: rgba(0, 0, 0, 0.85);
   }
 
@@ -390,7 +392,7 @@ h4 {
     z-index: -1000;
   }
 
-  .banner_content {
+  .banner__content {
     font-size: 2em;
   }
 
@@ -410,17 +412,22 @@ h4 {
     margin: 0;
   }
 
-  .today-dish .column {
-    border: 5px solid #ddd;
-    padding: 5px;
+  .dish .column {
+    border: 4px solid #fff;
+    /* padding: 5px; */
   }
 
-  .today-dish_img {
+  .dish .column:hover {
+    border: 4px solid #de423a;
+    opacity: 0.8;
+  }
+
+  .dish__img {
     height: 200px;
     object-fit: cover;
   }
 
-  .main-footer .container--flex {
+  .footer .container--flex {
     align-items: flex-start;
     word-wrap: break-word;
   }
@@ -437,13 +444,13 @@ h4 {
     width: 32%;
   }
 
-  .main-footer {
-    font-size: 0.8em;
+  .footer {
+    font-size: 0.9em;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .welcome-title {
+  .welcome__title {
     font-size: 2.2em;
   }
 
@@ -451,11 +458,11 @@ h4 {
     font-size: 1.2em;
   }
 
-  .description .column_txt {
+  .description .column__txt {
     line-height: 30px;
   }
 
-  .group_title {
+  .group__title {
     font-size: 2.2em;
   }
 
@@ -463,12 +470,12 @@ h4 {
     width: 24.5%;
   }
 
-  .column_title {
+  .column__title {
     font-size: 1em;
   }
 
   .main-footer {
-    font-size: 0.9em;
+    font-size: 1em;
   }
 }
 
@@ -480,13 +487,13 @@ h4 {
     font-size: 3em;
     padding: 0;
   }
-  .main-header .info_phone,
-  .main-header .info_address {
+  .header .info__phone,
+  .header .info__address {
     padding-right: 0px;
     font-size: 1.15em;
   }
 
-  .main-nav {
+  .nav {
     padding: 0;
   }
 
@@ -501,15 +508,15 @@ h4 {
     width: auto;
   }
 
-  .menu_link {
+  .menu__link {
     padding: 20px;
   }
 
-  .banner_content {
+  .banner__content {
     font-size: 2.5em;
   }
 
-  .banner_img {
+  .banner__img {
     height: 700px;
   }
 
@@ -519,7 +526,7 @@ h4 {
     padding: 20px;
   }
 
-  .welcome_title {
+  .welcome__title {
     font-size: 2.3em;
   }
 
@@ -527,22 +534,22 @@ h4 {
     font-size: 1.3em;
   }
 
-  .description .column_txt {
+  .description .column__txt {
     line-height: 50px;
   }
 
-  .today-dish_title {
+  .dish__title {
     font-size: 1.4em;
   }
 
-  .today-dish_price {
+  .dish__price {
     font-size: 1.8em;
   }
 
-  .main-footer {
+  .footer {
     padding-top: 30px;
     padding-bottom: 30px;
-    font-size: 1em;
+    font-size: 1.1em;
   }
 }
 
@@ -551,7 +558,7 @@ h4 {
     width: 1400px;
   }
 
-  .banner_img {
+  .banner__img {
     height: 800px;
   }
 
@@ -561,11 +568,11 @@ h4 {
     object-fit: cover;
   }
 
-  .today-dish_img {
+  .dish__img {
     height: 400px;
   }
 
-  .main-footer {
-    font-size: 1.1em;
+  .footer {
+    font-size: 1.2em;
   }
 }
