--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,3 +1,7 @@
+/* .group__title {
+  color: #de432a;
+} */
+
 .our-team {
   text-align: center;
   margin-bottom: 20px;
@@ -7,15 +11,14 @@
   align-items: flex-start;
 }
 
-.our-team_title {
+.our-team__title {
   font-family: "Pacifico", cursive;
-  color: red;
   font-weight: bold;
   font-size: 1.8em;
   margin-bottom: 10px;
 }
 
-.our-team_img {
+.our-team__img {
   width: 200px;
   height: 200px;
   object-fit: cover;
@@ -23,37 +26,41 @@
   margin: auto;
 }
 
-.our-team_txt {
+.our-team__img:hover {
+  border: 4px solid #de432a;
+}
+
+.our-team__txt {
   padding: 10px;
 }
 
 @media screen and (min-width: 480px) {
-  .our-team_img {
+  .our-team__img {
     width: 150px;
     height: 150px;
   }
 }
 
 @media screen and (min-width: 720px) {
-  .our-team_img {
+  .our-team__img {
     width: 220px;
     height: 220px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .our-team_img {
+  .our-team__img {
     width: 300px;
     height: 300px;
   }
 
-  .our-team_title {
+  .our-team__title {
     font-size: 2.2em;
   }
 }
 
 @media screen and (min-width: 1400px) {
-  .our-team_img {
+  .our-team__img {
     width: 400px;
     height: 400px;
   }
